--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       
     <div class="gif">
       <h2>Spirit Guide & Digital Muse</h2>
-      <h3>Maurice Moss <br> The Champion of Countdown, 8+ fellow, cybersecurity commandant, hardware hustler, knight of the network, and king of the code</h3>
+      <h3>Maurice Moss <br> The Champion of Countdown, 8+ best of the best, cybersecurity commandant, hardware hustler, knight of the network, and king of the code</h3>
     <img src='https://i.pinimg.com/originals/a5/8d/f3/a58df3474587baa46eb81415faa143d4.gif'/>
     <img src='https://thumbs.gfycat.com/JoyousVelvetyAsiandamselfly-size_restricted.gif'/>
     </div>
