--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
         <li>Used 2017 North Bay Fire as a focusing event collaborating with local first responders and nonprofits to host a community preparedness exhibition for over 400 local stakeholders</li>
       </ul>
     </div>
+      <div>
+      <h3>Warrensburg Fire Department</h3>
+      <h4>Firefighter</h4>
+      <h5>Nov 2014 - Dec 2016</h5>
+      <ul>
+        <li>Responded to medical and fire emergencies</li>
+        <li>Trained in emergency situations and incident command implementation</li>
+        <li>Maintained station equipment</li>
+      </ul>
+    </div>
     <div>
       <h3>United States Marine Corps</h3>
       <h4>Aviation Asset Analyst</h4>
