--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
      
     <div>
-      <h2>For more in-depth information please visit my <a href="linkedin.com/in/russell-b-squared">LinkedIn</a> profile </h2>
+      <h2>For more in-depth information please visit my <a href="https://linkedin.com/in/russell-b-squared">LinkedIn</a> profile </h2>
       
     <div class="footer">
       <h6> Copyright Russell Barr 2021 </h6>
