--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
   
   <body>
-    
+    <script>
+     var name = window.prompt("Hello! Welcome to my resume. What is your name?")
+
+  document.write("Nice to meet you, " + name + ". Please feel free to reach out to me at the contact information provided below.");
+    </script>
     <div class="resume">
     <div class="header">
       <h1>Russell Barr</h1>
