--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </div>
       
     <div>
-      <p>4850 Glenwood St. Apt. 3<br>Mission, KS 66202<br>
-        (573)999-3829<br>rbarrsquared@gmail.com
-      </p>
+      <p>4850 Glenwood St. Apt. 3<br>Mission, KS 66202<br>rbarrsquared@gmail.com</p>
     </div>
     
     <div>
