--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
       
     <div>
-      <p>4850 Glenwood St. Apt. 3<br>Mission, KS 66202<br>rbarrsquared@gmail.com</p>
+      <p>Mission, KS 66202<br>rbarrsquared@gmail.com</p>
     </div>
     
     <div>
